Stuff stuffity stuff

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Lato', serif;
+  font-family: 'Open Sans', serif;
   font-weight: 300;
   text-align: center;
 }
@@ -36,6 +36,14 @@ section {
   }
 }
 
+.latest-comments {
+  .user-rating { margin-bottom: 5px;}
+  .user-rating-location {
+    font-size: 12px;
+    margin-bottom: 20px;
+  }
+}
+
 .albums {
   
   table {
@@ -47,4 +55,32 @@ section {
     margin: 20px 0;
   }
   
+}
+
+.album-comments {
+  
+}
+
+.user-rating {
+  position: relative;
+  text-align: left;
+  width: 250px;
+  padding: 10px;
+  margin: 20px auto;
+  background-color: #eee;
+  
+  .user { font-size: 15px; text-transform: uppercase;}
+  .rating { 
+    text-align: center; line-height: 40px;
+    position: absolute; top: -10px; right: -10px;
+    width: 40px; height: 40px; border-radius: 50%;
+    &.r-1, &.r-2, &.r-3 { background-color: #cd2200;}
+    &.r-4, &.r-5, &.r-6, &.r-7 { background-color: #e1c820;}
+    &.r-8, &.r-9, &.r-10 { background-color: #40df00;}
+  }
+
+  .comment {
+    margin-top: 10px;
+    font-size: 13px;
+  }
 }
