--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
   = stylesheet_link_tag "http://yui.yahooapis.com/pure/0.5.0/pure-min.css"
   = stylesheet_link_tag "application", media: 'all'
   
-  = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Lato:300,400,700&subset=latin,latin-ext"
+  = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=latin,latin-ext"
   
   = javascript_include_tag "application"
   /[if lt IE 9]
