--- a/app/views/albums/_album.html.haml
+++ b/app/views/albums/_album.html.haml
@@ -1,7 +1,7 @@
 %tr
-  %td= album.artist
-  %td= link_to album.title, album
-  %td= album.year
-  %td= album.catnum
-  %td= album.label
+  %td.artist= album.artist
+  %td.title= link_to album.title, album
+  %td.year= album.year
+  %td.catnum= album.catnum
+  %td.label= album.label
   
