--- a/app/views/albums/show.html.haml
+++ b/app/views/albums/show.html.haml
@@ -1,18 +1,21 @@
-%section.album-info
-  %h3= link_to @album.artist, albums_path(search: @album.artist)
-  %h2= @album.title 
-  
-  .details
-    #{@album.label}, #{@album.catnum}, #{@album.year}.
-  
-%section.album-buttons
-  = link_to "Info", @album.info_url, class: 'pure-button' if @album.info_url
-  = link_to "Play", @album.download_url, class: 'pure-button pure-button-primary' if @album.download_url
-    
-%section.album-comments
-  %h3 Recenzije
+.album-page
 
-  - @album.user_ratings.includes(:user).each do |user_rating|
-    = render user_rating
+  %section.album-info
+    %h3= link_to @album.artist, albums_path(search: @album.artist)
+    %h2= @album.title 
   
+    .details
+      #{@album.label}, #{@album.catnum}, #{@album.year}.
+  
+  %section.album-buttons
+    = link_to "Info", @album.info_url, class: 'pure-button' if @album.info_url
+    = link_to "Play", @album.download_url, class: 'pure-button pure-button-primary' if @album.download_url
     
+  %section.album-comments
+    %h3 Recenzije
+
+    - @album.user_ratings.includes(:user).order("created_at").each do |user_rating|
+      = render user_rating
+  
+    - if !current_user.rated_album?(@album)
+      = render 'rating_form'
