--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,23 +1,25 @@
-%section.stats
-  .todo-progress-bar
-  .legend
-    Poslušano #{ number_with_delimiter @stats[:listened] } / 
-    Sakupljeno #{ number_with_delimiter @stats[:downloaded] } / 
-    Pronadjeno #{ number_with_delimiter @stats[:found] }
+.home-page
+
+  %section.stats
+    .todo-progress-bar
+    .legend
+      Poslušano #{ number_with_delimiter @stats[:listened] } / 
+      Sakupljeno #{ number_with_delimiter @stats[:downloaded] } / 
+      Pronadjeno #{ number_with_delimiter @stats[:found] }
     
-%section.start-actions
-  %h3 Kreni slušati
-  = link_to "Random", random_albums_path, class: 'pure-button pure-button-primary'
+  %section.start-actions
+    %h3 Kreni slušati
+    = link_to "Random", random_albums_path, class: 'pure-button pure-button-primary'
   
-  .or ili odaberi:
+    .or ili odaberi:
   
-  - [50, 60, 70, 80].each do |d|
-    = link_to "#{d}-te", albums_path(decade: d), class: 'tag-link'
-  = link_to "pretraži", albums_path, class: 'tag-link'
+    - [50, 60, 70, 80].each do |d|
+      = link_to "#{d}-te", albums_path(decade: d), class: 'tag-link'
+    = link_to "pretraži", albums_path, class: 'tag-link'
 
-%section.latest-comments
-  %h3 Najsvježiji komentari
+  %section.latest-comments
+    %h3 Najsvježiji komentari
 
-  - @user_ratings.each do |user_rating|
-    = render user_rating
-    .user-rating-location za #{link_to user_rating.album, user_rating.album}
+    - @user_ratings.each do |user_rating|
+      = render user_rating
+      .user-rating-location za #{link_to user_rating.album, user_rating.album}
