--- a/app/assets/stylesheets/user_ratings.css.scss
+++ b/app/assets/stylesheets/user_ratings.css.scss
@@ -6,7 +6,12 @@
   margin: 20px auto;
   background-color: #eee;
   
-  .user { font-size: 15px; text-transform: uppercase;}
+  .user { 
+    font-size: 13px;
+    text-transform: uppercase;
+    font-weight: 400;
+  }
+  
   .rating { 
     text-align: center; line-height: 40px;
     position: absolute; top: -10px; right: -10px;
