--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -1,13 +1,27 @@
 .albums-page {
   
-  .albums {
+  .filter {
+    label {
+      margin: 0 15px;
+    }
+  }
   
+  .albums {
     table {
       width: 80%;
       margin: auto;
     }
   
-    .catnum, .label { word-break: keep-all; white-space: nowrap; }
+    .label, .ratings {
+      word-break: keep-all;
+      white-space: nowrap;
+    }
+    
+    .ratings .rating {
+      display: inline-block;
+      width: 30px; height: 30px; line-height: 30px;
+      margin-right: 5px;
+    }
 
     .pagination {
       margin: 20px 0;
@@ -19,4 +33,11 @@
 .album-page {
   
   h4 { margin: 25px 0 5px 0;}
+  
+  .user-rating {
+    .edit {
+      font-size: 13px;
+      text-align: right;
+    }
+  }
 }
