--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -12,6 +12,8 @@
       padding: 5px 10px;
       background: #eee;
       text-decoration: none;
+      
+      &:hover { background-color: #0078e7; color: white;}
     }
   }
   
