--- a/app/views/albums/show.html.haml
+++ b/app/views/albums/show.html.haml
@@ -10,6 +10,7 @@
   %section.album-buttons
     = link_to "Info", @album.info_url, target: '_blank', class: 'pure-button' if @album.info_url
     = link_to "Play", @album.download_url, data: {popup: true}, class: 'pure-button pure-button-primary' if @album.download_url
+    .report=link_to "Prijavi pogrešku", new_album_issue_path(album_id: @album.id)
     
   %section.album-comments
     %h3 Recenzije
