--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,7 +8,7 @@
       Pronađeno #{ number_with_delimiter @stats[:found] }
     
   %section.start-actions
-    %h3 Kreni slušati
+    %h3 Slušaj:
     = link_to "Random", random_albums_path, class: 'pure-button pure-button-primary'
   
     .or ili odaberi:
