--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,7 +1,27 @@
 .home-page {
   
   .stats {
-
+    .bar {
+      position: relative;
+      width: 400px;
+      height: 50px;
+      border: 1px solid #777;
+      border-radius: 5px;
+      margin: auto;
+    }
+    
+    .listened, .downloaded {
+      position: absolute;
+      top: 0; left: 0;
+      height: 100%;
+    }
+    
+    .listened { background-color: #4db849;}
+    .downloaded { background-color: #0078e7;}
+    
+    .legend {
+      margin-top: 5px;
+    }
   }
 
   .start-actions {
