New crawlers, plus covers

--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -39,6 +39,14 @@
   
   h4 { margin: 25px 0 5px 0;}
   
+  .album-image {
+    max-width: 400px;
+  }
+  
+  .details {
+    margin-bottom: 10px;
+  }
+  
   .report {
     font-size: 13px;
     margin: 10px 0;
