--- a/app/assets/stylesheets/user_ratings.css.scss
+++ b/app/assets/stylesheets/user_ratings.css.scss
@@ -10,6 +10,7 @@
     font-size: 13px;
     text-transform: uppercase;
     font-weight: 400;
+    a { text-decoration: none; }
   }
   
   .rating { 
