--- a/app/views/albums/_user_rating.html.haml
+++ b/app/views/albums/_user_rating.html.haml
@@ -1,6 +1,6 @@
 .user-rating
   .rating{class: "r-#{user_rating.rating}"}= user_rating.rating
-  .user= user_rating.user
+  .user= link_to user_rating.user, user_path(user_rating.user)
   .comment= user_rating.comment
   .edit
     = link_to "Promijeni", edit_user_rating_path(user_rating) if user_rating.user_id == current_user.id
