Added lists and some more stuff

--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -47,6 +47,11 @@
     margin-bottom: 10px;
   }
   
+  .add-to-list {
+    font-size: 13px;
+    margin: 10px 0;    
+  }
+  
   .report {
     font-size: 13px;
     margin: 10px 0;
