--- a/app/views/albums/_album.html.haml
+++ b/app/views/albums/_album.html.haml
@@ -1,4 +1,4 @@
-%tr
+%tr{ class: album_row_class(album) }
   %td.artist= album.artist
   %td.title= link_to album.title, album
   %td.year= album.year
