--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,22 +1,27 @@
 .user-page {
-  
+
   table {
     width: 80%;
     margin: auto;
-    text-align: left;  
-    
+    text-align: left;
+
     .date-cell {
       word-break: keep-all;
       white-space: nowrap;
+    }
+
+    .review-cell {
+      font-size: 14px;
+      padding: 20px;
     }
     
     .rating-cell {
       text-align: center;
     }
-    
+
     .rating {
       line-height: 40px; width: 40px; height: 40px;
     }
   }
-    
+
 }
