--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,7 @@
 @import "user_lists";
 @import "user_ratings";
 @import "album_issues";
+@import "settings";
 
 body {
   font-family: 'Open Sans', serif;
