--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -25,6 +25,12 @@
   }
 
   .start-actions {
+    
+    .settings-link {
+      display: block;
+      margin-top: 5px;
+      font-size: 12px;
+    }
     .or { margin: 15px 0;}
   
     .tag-link { 
