--- a/app/views/albums/index.html.haml
+++ b/app/views/albums/index.html.haml
@@ -6,6 +6,10 @@
         = label_tag :decade do
           Desetljeće:
           = select_tag :decade, options_for_select(decade_options, params[:decade]), class: 'autosubmit'
+
+        = label_tag :label do
+          Izdavač:
+          = select_tag :label, options_for_select(Label.major, params[:label]), include_blank: 'Svi', class: 'autosubmit'
       
         = label_tag :show_all do
           = check_box_tag :show_all, "1", params[:show_all], class: 'autosubmit'
