--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,7 +6,8 @@
   %section.start-actions
     %h3 Slušaj:
     = link_to "Random", random_albums_path, class: 'pure-button pure-button-primary'
-  
+    = link_to "Settings", settings_path, class: 'settings-link'
+    
     .or ili odaberi:
   
     - [50, 60, 70, 80].each do |d|
