--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,7 +4,7 @@
 @import "user_lists";
 @import "user_ratings";
 @import "album_issues";
-@import "showcase";
+@import "shelf";
 @import "settings";
 
 body {
