--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,9 +4,9 @@
     = homepage_progress_bar(@stats)
     
   %section.start-actions
-    %h3 Slušaj random:
+    %h3 Slušaj:
     = link_to "Štogod", random_albums_path, class: 'pure-button pure-button-primary'
-    = link_to "Po naslovnici", random_showcase_albums_path, class: 'pure-button pure-button-primary'
+    = link_to "S Police", shelf_albums_path, class: 'pure-button pure-button-primary'
     = link_to "Settings", settings_path, class: 'settings-link'
     
     .or ili odaberi:
