Temporarily remove play button

--- a/app/views/albums/show.html.haml
+++ b/app/views/albums/show.html.haml
@@ -10,7 +10,7 @@
 
     .album-buttons
       = link_to "Info", @album.info_url, target: '_blank', class: 'pure-button' if @album.info_url
-      = link_to "Play", tracks_album_url(@album), class: 'play-button pure-button pure-button-primary' if @album.download_url
+      =# link_to "Play", tracks_album_url(@album), class: 'play-button pure-button pure-button-primary' if @album.download_url
       = link_to "Open", @album.download_url, data: {popup: true}, class: 'pure-button' if @album.download_url
       .minor-links
         =link_to "Dodaj na listu", new_user_list_album_path(album_id: @album.id)
