--- a/app/views/albums/show.html.haml
+++ b/app/views/albums/show.html.haml
@@ -9,8 +9,8 @@
       #{@album.label}, #{@album.catnum}, #{@album.year}.
 
     .album-buttons
-      = link_to "Info", @album.info_url, target: '_blank', class: 'pure-button' if @album.info_url
-      = link_to "Play", tracks_album_url(@album), class: 'play-button pure-button pure-button-primary' if @album.download_url
+      = link_to "Info", @album.info_url, class: 'pure-button' if @album.info_url
+      = link_to "Play", 'javascript:', class: 'play-button pure-button pure-button-primary' if @album.tracklist?
       = link_to "Open", @album.download_url, data: {popup: true}, class: 'pure-button' if @album.download_url
       .minor-links
         =link_to "Dodaj na listu", new_user_list_album_path(album_id: @album.id)
@@ -18,8 +18,9 @@
         =link_to "Prijavi pogrešku", new_album_issue_path(album_id: @album.id)
 
   %section.player-container
-    %audio.player{controls: true}
+    %audio.player{controls: true, data: { tracks: @album.tracks.to_json }}
     .playlist
+
 
   %section.album-comments
     %h3 Recenzije
