Album sets added

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,8 +3,8 @@
 @import "users";
 @import "user_lists";
 @import "user_ratings";
+@import "album_sets";
 @import "album_issues";
-@import "shelf";
 @import "radio";
 @import "settings";
 
