Radio filter, small improvements on album search

--- a/app/views/albums/_table_header.html.haml
+++ b/app/views/albums/_table_header.html.haml
@@ -1,7 +1,7 @@
 %tr
   %th= sortable("artist", "Izvođač")
   %th= sortable("title", "Naslov")
-  %th= sortable("year", "Godina")
-  %th= sortable("label, catnum", "Label") 
+  %th= sortable("year, label, catnum", "Godina")
+  %th= sortable("label, catnum", "Label")
   %th Info
   %th= sortable("average_rating", "Ocjene")
