--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,10 @@ a {
   color: #333;
 }
 
+button, input {
+  font-weight: 300;
+}
+
 header {
   margin: 30px 0;
   h1 a { text-decoration: none; }
