--- a/app/views/albums/index.html.haml
+++ b/app/views/albums/index.html.haml
@@ -10,18 +10,20 @@
         = label_tag :label do
           Izdavač:
           = select_tag :label, options_for_select(Label.major, params[:label]), include_blank: 'Svi', class: 'autosubmit'
-      
+
         = label_tag :show_all do
           = check_box_tag :show_all, "1", params[:show_all], class: 'autosubmit'
           Prikaži i nesakupljene
-      
+
       %fieldset
         = text_field_tag :search, params[:search], placeholder: "Ime autora ili albuma"
+        = hidden_field_tag :sort, params[:sort]
+        = hidden_field_tag :direction, params[:direction]
         = submit_tag "Traži", class: 'pure-button pure-button-primary'
-    
+
 
   %section.albums
-  
+
     = paginate @albums
 
     %table.pure-table.pure-table-striped
