--- a/app/views/albums/show.html.haml
+++ b/app/views/albums/show.html.haml
@@ -10,7 +10,7 @@
 
     .album-buttons
       = link_to "Info", @album.info_url, class: 'pure-button' if @album.info_url
-      = link_to "Play", 'javascript:', class: 'play-button pure-button pure-button-primary' if @album.tracklist?
+      = button_tag "Play", type: 'button', class: 'play-button pure-button pure-button-primary' if @album.tracklist?
       = link_to "Open", @album.download_url, data: {popup: true}, class: 'pure-button' if @album.download_url
       .minor-links
         =link_to "Dodaj na listu", new_user_list_album_path(album_id: @album.id)
@@ -18,7 +18,7 @@
         =link_to "Prijavi pogrešku", new_album_issue_path(album_id: @album.id)
 
   %section.player-container
-    %audio.player{controls: true, data: { tracks: @album.tracks.to_json }}
+    %audio.player{controls: true, data: { album_id: @album.id, tracks: @album.tracks.to_json }}
     .playlist
 
 
